--- a/pipeline/pipeline.yml
+++ b/pipeline/pipeline.yml
@@ -5,7 +5,6 @@ resources:
   source:
     uri: git@github.com:SUSE/kubernetes-charts-suse-com.git
     private_key: {{github-private-key}}
-
 jobs:
 - name: sync
   plan:
@@ -16,10 +15,12 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: dragonchaser/aws-cli
+          repository: splatform/concourse-aws-helm
       inputs:
         - name: ci
       params:
         BUCKET: {{s3-helm-charts-bucket}}
+        AWS_ACCESS_KEY_ID: {{aws-access-key}}
+        AWS_SECRET_ACCESS_KEY: {{aws-secret-key}}
       run:
         path: ci/pipeline/tasks/sync.sh
