--- a/stable/console/values.yaml
+++ b/stable/console/values.yaml
@@ -1,5 +1,5 @@
 # Tag for images
-consoleVersion: cap-0.9.8-g4f95ed2
+consoleVersion: cap-0.9.9-g3100098
 dockerRegistrySecret: regsecret
 # Specify default DB password
 dbPassword: changeme
