Fix registry and org

--- a/stable/uaa/values.yaml
+++ b/stable/uaa/values.yaml
@@ -108,8 +108,8 @@ kube:
     persistent: "persistent"
     shared: "shared"
   registry:
-    hostname: "staging.registry.howdoi.website"
+    hostname: "registry.suse.com"
     username: ""
     password: ""
-  organization: "splatform"
+  organization: "cap"
   auth: ~
