--- a/stable/console/templates/deployment.yaml
+++ b/stable/console/templates/deployment.yaml
@@ -157,15 +157,15 @@ spec:
         {{- if .Values.socksProxy }}
           value: {{.Values.socksProxy}}
         {{- end }}
-        {{- if .Values.env.UAA_HOST }}  
+        {{- if or .Values.env.UAA_HOST .Values.env.DOMAIN }}  
         - name: UAA_ENDPOINT 
-          value: "https://scf.{{.Values.env.UAA_HOST}}:{{.Values.env.UAA_PORT}}"
+          value: {{ template "scfUaaEndpoint" . }}
         - name: CONSOLE_CLIENT 
           value: cf
         - name: CONSOLE_CLIENT_SECRET
           value:
         - name: AUTO_REG_CF_URL
-          value: "https://api.{{.Values.env.DOMAIN}}"
+          value: https://api.{{.Values.env.DOMAIN}}
         - name: CONSOLE_ADMIN_SCOPE 
           value: cloud_controller.admin
         - name: SKIP_SSL_VALIDATION 
