Add quotes back in

--- a/stable/console/templates/deployment.yaml
+++ b/stable/console/templates/deployment.yaml
@@ -165,7 +165,7 @@ spec:
         - name: CONSOLE_CLIENT_SECRET
           value:
         - name: AUTO_REG_CF_URL
-          value: https://api.{{.Values.env.DOMAIN}}
+          value: "https://api.{{.Values.env.DOMAIN}}"
         - name: CONSOLE_ADMIN_SCOPE 
           value: cloud_controller.admin
         - name: SKIP_SSL_VALIDATION 
