--- a/stable/cf-usb-sidecar-mysql/values.yaml
+++ b/stable/cf-usb-sidecar-mysql/values.yaml
@@ -18,7 +18,7 @@ kube:
     persistent: "persistent"
     shared: "shared"
   registry:
-    hostname: registry.suse.de
+    hostname: registry.suse.com
     username: ""
     password: ""
   organization: cap
