--- a/stable/console/templates/deployment.yaml
+++ b/stable/console/templates/deployment.yaml
@@ -104,7 +104,9 @@ spec:
         - name: HTTP_CONNECTION_TIMEOUT_IN_SECS
           value: "10"
         - name: HTTP_CLIENT_TIMEOUT_IN_SECS
-          value: "20"
+          value: "30"
+        - name: HTTP_CLIENT_TIMEOUT_MUTATING_IN_SECS
+          value: "120"
         - name: SKIP_TLS_VERIFICATION
           value: "false"
         - name: CONSOLE_PROXY_TLS_ADDRESS
@@ -116,7 +118,7 @@ spec:
         - name: UPGRADE_LOCK_FILENAME
           value: upgrade.lock
         - name: ALLOWED_ORIGINS
-          value: "https://localhost"
+          value: https://localhost
         - name: ENCRYPTION_KEY_VOLUME
           value: "{{ .Release.Name }}-encryption-key-volume"
         - name: ENCRYPTION_KEY_FILENAME
@@ -157,6 +159,10 @@ spec:
         {{- if .Values.socksProxy }}
           value: {{.Values.socksProxy}}
         {{- end }}
+        {{- if .Values.console.backendLogLevel }}
+        - name: LOG_LEVEL
+          value: {{.Values.console.backendLogLevel}}
+        {{- end }}
         {{- if or .Values.env.UAA_HOST .Values.env.DOMAIN }}  
         - name: UAA_ENDPOINT 
           value: {{ template "scfUaaEndpoint" . }}
@@ -165,7 +171,7 @@ spec:
         - name: CONSOLE_CLIENT_SECRET
           value:
         - name: AUTO_REG_CF_URL
-          value: "https://api.{{.Values.env.DOMAIN}}"
+          value: https://api.{{.Values.env.DOMAIN}}
         - name: CONSOLE_ADMIN_SCOPE 
           value: cloud_controller.admin
         - name: SKIP_SSL_VALIDATION 
@@ -181,6 +187,14 @@ spec:
           value: {{.Values.uaa.consoleAdminIdentifier}}
         - name: SKIP_SSL_VALIDATION 
           value: {{default "true" .Values.uaa.skipSSLValidation | quote}}
+        {{- end }}
+        {{- if .Values.console.cookieDomain }}{{ if ne .Values.console.cookieDomain "-" }}
+        - name: COOKIE_DOMAIN
+          value: {{.Values.console.cookieDomain}}
+        {{- end }}
+        {{- else if .Values.env.DOMAIN }}  
+        - name: COOKIE_DOMAIN
+          value: {{.Values.env.DOMAIN}}
         {{- end }}
         ports:
         - containerPort: 3003
