--- a/stable/console/templates/service.yaml
+++ b/stable/console/templates/service.yaml
@@ -27,7 +27,7 @@ spec:
   selector:
     app: "{{ .Release.Name }}"
     component: console
-{{- if .Values.useLb }}
+{{- if or .Values.useLb .Values.services.loadbalanced }}
   type: LoadBalancer
 {{- else }}
   type: NodePort
