--- a/stable/console/values.yaml
+++ b/stable/console/values.yaml
@@ -1,5 +1,5 @@
 # Tag for images
-consoleVersion: cap-1.1.0-g627eb29
+consoleVersion: 2.0.0-cap
 dockerRegistrySecret: regsecret
 # Specify default DB password
 dbPassword: changeme
@@ -13,10 +13,12 @@ dbProvider: mysql
 useLb: false
 console:
   port: 443
+  cookieDomain:
 # externalIP: 127.0.0.1
+  backendLogLevel: info
 images:
   console: stratos-console
-  proxy: stratos-proxy
+  proxy: stratos-jetstream
   postflight: stratos-postflight-job
   mariadb: stratos-mariadb
 
@@ -59,7 +61,7 @@ uaa:
   consoleClientSecret: 
   consoleAdminIdentifier: 
   skipSSLValidation: false
- # SCF values compatability 
+# SCF values compatability 
 env:
   DOMAIN:
   UAA_HOST: 
@@ -74,3 +76,5 @@ kube:
     username:
     password:
     email: default
+services:
+  loadbalanced: false
