--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -5,7 +5,7 @@ controller:
   name: controller
   image:
     repository: registry.suse.com/sles12/nginx-ingress-controller
-    tag: "0.15.0"
+    tag: "0.15.1"
     pullPolicy: IfNotPresent
     runAsUser: 33
 
@@ -358,7 +358,7 @@ rbac:
 # If true, create & use Pod Security Policy resources
 # https://kubernetes.io/docs/concepts/policy/pod-security-policy/
 podSecurityPolicy:
-  enabled: false
+  enabled: true
 
 serviceAccount:
   create: true
