--- a/stable/console/Chart.yaml
+++ b/stable/console/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 appVersion: 2.2.0
 description: A Helm chart for deploying Stratos UI Console
 name: console
-version: 2.2.0-c558096-cap
+version: 2.2.0
