--- a/stable/dev-monitor/templates/grafana-dashboards-caasp-pods.yaml
+++ b/stable/dev-monitor/templates/grafana-dashboards-caasp-pods.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-dashboards-caasp-pods
-  namespace: monitoring
+  namespace: {{ .Release.Namespace }}
   labels:
      grafana_dashboard: "1"
 data:
