--- a/stable/console/Chart.yaml
+++ b/stable/console/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
+appVersion: 2.3.0
 description: A Helm chart for deploying Stratos UI Console
 name: console
-version: 2.1.0
+version: 2.3.0
