Stratos Release 2.4.0 Helm Chart Changes

--- a/stable/console/templates/secrets.yaml
+++ b/stable/console/templates/secrets.yaml
@@ -54,3 +54,33 @@ metadata:
 data:
   .dockercfg: {{ template "imagePullSecret" . }}
 {{- end}}
+{{- if .Values.console.migrateVolumes }}
+---
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: "{{ .Release.Name }}-key-secret"
+  labels:
+    app.kubernetes.io/name: "stratos"
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
+    app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
+    app.kubernetes.io/component: "console-key-secret"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+data:
+  key: {{ randAlphaNum 64 | b64enc }}
+---
+apiVersion: v1
+kind: Secret
+type: kubernetes.io/tls
+metadata:
+  name: "{{ .Release.Name }}-cert-secret"
+  labels:
+    app.kubernetes.io/name: "stratos"
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
+    app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
+    app.kubernetes.io/component: "console-cert-secret"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+data:
+{{ ( include "console.generateCertificate" . ) | indent 2 }}
+{{- end -}}
