--- a/stable/log-agent-rsyslog/tests/helpers/rsyslog-server/rsyslog-server-deployment.yaml
+++ b/stable/log-agent-rsyslog/tests/helpers/rsyslog-server/rsyslog-server-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: rsyslog-server
-        image: registry.suse.com/caasp/v4/rsyslog:v8.39.0
+        image: registry.suse.com/caasp/v4/rsyslog:8.39.0
         imagePullPolicy: "Always"
         command: ["rsyslogd"]
         args: ["-n", "-f", "/etc/rsyslog.conf"]
