--- a/stable/console/Chart.yaml
+++ b/stable/console/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 2.4.0
+appVersion: "1.5"
 description: A Helm chart for deploying Stratos UI Console
 name: console
-version: 2.4.0
+version: 2.5.0
