--- a/stable/metrics/templates/deployment.yaml
+++ b/stable/metrics/templates/deployment.yaml
@@ -1,27 +1,40 @@
+{{ $firehoseClientSecret :=  default (randAlphaNum 64) .Values.firehoseExporter.uaa.clientSecret }}
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: "stratos-metrics-{{ .Values.cfName }}"
+  name: "{{ .Release.Name }}-nginx"
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name:  "stratos-metrics"
+      app.kubernetes.io/component: "stratos-metrics-nginx"
+      app.kubernetes.io/instance: "{{ .Release.Name }}"
   template:
     metadata:
       labels:
         app.kubernetes.io/name: "stratos-metrics"
         app.kubernetes.io/instance: "{{ .Release.Name }}"
         app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
-        app.kubernetes.io/component: "stratos-metrics-{{ .Values.cfName }}-nginx"
+        app.kubernetes.io/component: "stratos-metrics-nginx"
         helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     spec:
       containers:
-      - image: {{.Values.dockerRepository}}/{{.Values.dockerOrganization}}/{{.Values.nginx.image}}:{{.Values.imageTag}}
+      - image: {{.Values.dockerRepository}}/{{.Values.dockerOrganization}}/{{.Values.nginx.image}}:1.1.0-39adb67-cap
+        imagePullPolicy: {{.Values.imagePullPolicy}}
         name: nginx
         env:
         - name: USERNAME
-          value: "{{ .Values.nginx.username }}"
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Release.Name }}-metrics-credentials
+              key: username
         - name: PASSWORD
-          value: "{{ .Values.nginx.password }}"
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Release.Name }}-metrics-credentials
+              key: password
         ports:
         - containerPort: 443
           name: https
@@ -35,39 +48,43 @@ spec:
   {{- if .Values.firehoseExporter.enabled }}
       initContainers:
       - name: setup-uaa
-        image: {{.Values.dockerRepository}}/{{.Values.dockerOrganization}}/{{.Values.firehoseExporter.initContainerImage}}:{{.Values.imageTag}} 
+        image: {{.Values.dockerRepository}}/{{.Values.dockerOrganization}}/{{.Values.firehoseExporter.initContainerImage}}:1.1.0-39adb67-cap 
+        imagePullPolicy: {{.Values.imagePullPolicy}}
         env:
         - name: SKIP_SSL_VALIDATION
-          value: "{{ .Values.firehoseExporter.uaa.skipSslVerification}}"
-        {{- if .Values.firehoseExporter.noIdentityZone }}  
-        - name: IGNORE_IDENTITY_ZONE
-          value: "true"
-        {{- end }}
-        {{- if .Values.env.UAA_HOST }}  
-        - name: UAA_ENDPOINT
-          value: "{{ .Values.env.UAA_HOST }}:{{ .Values.env.UAA_PORT }}"
-        {{- else }}
-        - name: UAA_ENDPOINT
-          value: "{{ .Values.firehoseExporter.uaa.endpoint }}"
-        {{- end }}
+          value: "{{ template "uaaSkipSslVerification" . }}"
         - name: UAA_ADMIN
-          value: "{{ .Values.firehoseExporter.uaa.admin.client }}"
+          value: "{{ template "uaaAdminClient" . }}"
         - name: UAA_ADMIN_SECRET
-          value: "{{ template "uaaClientSecret" . }}"
-        - name: CF_IDENTITY_ZONE
-        {{- if .Values.env.UAA_CF_IDENTITY_ZONE }}  
-          value: "{{ .Values.env.UAA_CF_IDENTITY_ZONE }}"
-        {{- else }}
-          value: "{{ .Values.firehoseExporter.uaa.cfIdentityZone }}"
-        {{- end }}
-        - name: PROMETHEUS_ADMIN_CLIENT
-          value: "{{ .Values.firehoseExporter.uaa.prometheusAdmin.client }}"
-        - name: PROMETHEUS_ADMIN_CLIENT_SECRET
-          value: "{{ .Values.firehoseExporter.uaa.prometheusAdmin.clientSecret }}"
+          value: "{{ template "uaaAdminClientSecret" . }}"
         - name: PROMETHEUS_CLIENT
           value: "{{ .Values.firehoseExporter.uaa.client }}"
         - name: PROMETHEUS_CLIENT_SECRET
-          value: "{{ .Values.firehoseExporter.uaa.clientSecret }}"
+          value: "{{ $firehoseClientSecret }}"
+        - name : UAA_AUTHORITY
+          value: "doppler.firehose"
+        - name: ZONE
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Release.Name }}-endpoint-config
+              key: zone
+        - name: ROOT_UAA_ENDPOINT
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Release.Name }}-endpoint-config
+              key: root_uaa_endpont
+        - name: DOPPLER_ENDPOINT
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Release.Name }}-endpoint-config
+              key: doppler_endpoint
+        - name: UAA_ENDPOINT
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Release.Name }}-endpoint-config
+              key: uaa_endpoint
+
+
   {{- end }}
       {{- if and .Values.kube.registry.username .Values.kube.registry.password }}
       imagePullSecrets:
@@ -76,7 +93,11 @@ spec:
       volumes:
       - name: ssl-cert
         secret:
+        {{- if .Values.nginx.tls }}
+          secretName: "{{ .Values.nginx.tls }}"
+        {{- else }}
           secretName: "{{ .Release.Name }}-nginx-tls"
+        {{- end }}
       - name: nginx-config
         configMap:
           name: "{{ .Release.Name }}-stratos-metrics-config"
@@ -90,64 +111,66 @@ spec:
 {{ $releaseName := .Release.Name }}
 {{ $firehoseExporter := .Values.firehoseExporter }}
 {{ $appVersion := .Chart.AppVersion }}
-{{ $cfName :=  .Values.cfName }}
 {{ $helmChartName :=  .Chart.Name }}
 {{ $helmChartVersion :=  .Chart.Version }}
 {{ $values :=  .Values }}
+{{ $dot := . }}
   {{- range int .Values.firehoseExporter.instances | until }}
 
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: "stratos-metrics-{{ $cfName }}-firehose-exporters-{{ . }}"
+  name: "{{ $releaseName }}-firehose-exporters-{{ . }}"
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name:  "stratos-metrics"
+      app.kubernetes.io/component: "stratos-metrics-firehose-exporters-{{ . }}"
+      app.kubernetes.io/instance: "{{ $releaseName }}"
   template:
     metadata:
       labels:
         app.kubernetes.io/name: "stratos-metrics"
         app.kubernetes.io/instance: "{{ $releaseName }}"
         app.kubernetes.io/version: "{{ $appVersion }}"
-        app.kubernetes.io/component: "stratos-metrics-{{ $cfName }}-firehose-exporters-{{ . }}"
+        app.kubernetes.io/component: "stratos-metrics-firehose-exporters-{{ . }}"
         helm.sh/chart: "{{ $helmChartName }}-{{ $helmChartVersion | replace "+" "_" }}"
     spec:
       containers:
-      - image: {{$values.dockerRepository}}/{{$values.dockerOrganization}}/{{$values.firehoseExporter.image}}:{{$values.imageTag}}
+      - image: {{$values.dockerRepository}}/{{$values.dockerOrganization}}/{{$values.firehoseExporter.image}}:1.1.0-39adb67-cap
+        imagePullPolicy: {{ $values.imagePullPolicy }}
         name: firehose-exporter
         env:
-        {{- if $values.firehoseExporter.noIdentityZone }}  
         - name: FIREHOSE_EXPORTER_UAA_URL
-          value: "https://{{ $values.env.UAA_HOST }}:{{ $values.env.UAA_PORT }}"
-        {{- else if $values.env.UAA_HOST }}  
-        - name: FIREHOSE_EXPORTER_UAA_URL
-          value: "https://{{ $values.env.UAA_CF_IDENTITY_ZONE }}.{{ $values.env.UAA_HOST }}:{{ $values.env.UAA_PORT }}"
-        {{- else }}
-        - name: FIREHOSE_EXPORTER_UAA_URL
-          value: "https://{{ $values.firehoseExporter.uaa.cfIdentityZone }}.{{ $values.firehoseExporter.uaa.endpoint }}"
-        {{- end }}
+          valueFrom:
+            configMapKeyRef:
+              name: {{$releaseName}}-endpoint-config
+              key: uaa_endpoint
         - name: FIREHOSE_EXPORTER_UAA_CLIENT_ID
           value: "{{ $values.firehoseExporter.uaa.client }}"
         - name: FIREHOSE_EXPORTER_UAA_CLIENT_SECRET
-          value: "{{ $values.firehoseExporter.uaa.clientSecret }}"
+          value: "{{ $firehoseClientSecret }}"
         - name: FIREHOSE_EXPORTER_DOPPLER_SUBSCRIPTION_ID
           value: "{{ $releaseName }}-prometheus"
-        {{- if $values.env.DOMAIN }}  
         - name: FIREHOSE_EXPORTER_DOPPLER_URL
-          value: "wss://doppler.{{ $values.env.DOMAIN }}:{{$values.env.DOPPLER_PORT}}"
-        {{- else }}
-        - name: FIREHOSE_EXPORTER_DOPPLER_URL
-          value: "{{ $values.firehoseExporter.dopplerUrl }}"
-        {{- end }}
+          valueFrom:
+            configMapKeyRef:
+              name: {{$releaseName}}-endpoint-config
+              key: doppler_endpoint
+        - name: FIREHOSE_EXPORTER_LOGGING_URL
+          valueFrom:
+            configMapKeyRef:
+              name: {{$releaseName}}-endpoint-config
+              key: doppler_endpoint
+        - name: FIREHOSE_EXPORTER_METRICS_ENVIRONMENT
+          valueFrom:
+            configMapKeyRef:
+              name: {{$releaseName}}-endpoint-config
+              key: doppler_endpoint
         - name: FIREHOSE_EXPORTER_SKIP_SSL_VERIFY
-          value: "{{ $values.firehoseExporter.uaa.skipSslVerification}}"
-        {{- if $values.env.DOMAIN }}  
-        - name: FIREHOSE_EXPORTER_METRICS_ENVIRONMENT	
-          value: "wss://doppler.{{ $values.env.DOMAIN }}:{{$values.env.DOPPLER_PORT}}"
-        {{- else }}
-        - name: FIREHOSE_EXPORTER_METRICS_ENVIRONMENT	
-          value: "{{ $values.firehoseExporter.dopplerUrl }}"
-        {{- end }}
+          value: "{{ template "uaaSkipSslVerification" $dot }}"
         ports:
         - containerPort: 9186
           name: fh-exp
