--- a/stable/metrics/templates/secrets.yaml
+++ b/stable/metrics/templates/secrets.yaml
@@ -14,3 +14,23 @@ metadata:
 data:
   .dockercfg: {{ template "imagePullSecret" . }}
 {{- end}}
+{{- if not .Values.nginx.tls }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: "{{ .Release.Name }}-nginx-tls"
+type: Opaque
+data:
+  cert.crt: {{ .Values.nginx.ssl.cert | b64enc }}
+  cert.key: {{ .Values.nginx.ssl.certKey | b64enc }}
+{{- end}}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: "{{ .Release.Name }}-metrics-credentials"
+type: Opaque
+data:
+  username: {{ template "nginx.credentials-username-base64" . }}
+  password: {{ template "nginx.credentials-password-base64" . }}
