--- a/stable/metrics/templates/service.yaml
+++ b/stable/metrics/templates/service.yaml
@@ -1,9 +1,63 @@
+---
+apiVersion: v1
+kind: Service
+metadata:
+{{- if .Values.metrics.service -}}
+{{- if .Values.metrics.service.annotations }}
+  annotations:
+{{ toYaml .Values.metrics.service.annotations | indent 4 }}
+{{- end }}
+{{- end }}  
+  name: {{ .Release.Name }}-metrics-nginx
+  labels:
+    app.kubernetes.io/name: "stratos-metrics"
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
+    app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
+    app.kubernetes.io/component: "stratos-metrics-nginx-service"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+spec:
+  type: {{ template "service.serviceType" . }}
+{{- if .Values.metrics.service }}
+{{- if .Values.metrics.service.clusterIP }}
+  clusterIP: {{ .Values.metrics.service.clusterIP }}
+{{- end }}
+{{- end }}
+{{- template "service.externalIPs" . }}
+{{- if .Values.metrics.service -}}
+{{- if .Values.metrics.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.metrics.service.loadBalancerIP }}
+{{- end }}
+{{- end -}}
+{{- if .Values.metrics.service }}
+{{- if .Values.metrics.service.loadBalancerSourceRanges }}
+  loadBalancerSourceRanges:
+  {{- range $cidr := .Values.metrics.service.loadBalancerSourceRanges }}
+    - {{ $cidr }}
+  {{- end }}
+{{- end }}
+{{- end }}
+{{- if .Values.metrics.service -}}
+{{- if .Values.metrics.service.externalName }}
+  externalName: {{ .Values.metrics.service.externalName }}
+{{- end }}
+{{- end }}
+  ports:
+  - name: nginx
+    port: {{ template "service.servicePort" . }}
+    protocol: TCP
+    targetPort: 443
+    {{- if .Values.metrics.service.nodePort }}
+    nodePort: {{ .Values.metrics.service.nodePort }}
+    {{- end }}
+  selector:
+    app.kubernetes.io/name: "stratos-metrics"
+    app.kubernetes.io/component: "stratos-metrics-nginx"
+
 {{- if .Values.firehoseExporter.enabled }}
 
 {{ $releaseName := .Release.Name }}
 {{ $firehoseExporter := .Values.firehoseExporter }}
 {{ $appVersion := .Chart.AppVersion }}
-{{ $cfName :=  .Values.cfName }}
 {{ $helmChartName :=  .Chart.Name }}
 {{ $helmChartVersion :=  .Chart.Version }}
   {{- range int .Values.firehoseExporter.instances | until }}
@@ -11,56 +65,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ $releaseName }}-{{ $firehoseExporter.serviceName }}-{{ . }}
+  name: {{ $releaseName }}-f-exp-service-{{ . }}
   labels:
     app.kubernetes.io/name: "stratos-metrics"
     app.kubernetes.io/instance: "{{ $releaseName }}"
     app.kubernetes.io/version: "{{ $appVersion }}"
-    app.kubernetes.io/component: "stratos-metrics-{{ $cfName }}-firehose-exporter-service"
+    app.kubernetes.io/component: "stratos-metrics-firehose-exporter-service-{{ . }}"
     helm.sh/chart: "{{ $helmChartName }}-{{ $helmChartVersion | replace "+" "_" }}"
 spec:
-  type: {{ $firehoseExporter.serviceType }}
+  type: ClusterIP
   ports:
-  - port: {{ $firehoseExporter.externalPort }}
-    targetPort: {{ $firehoseExporter.internalPort }}
+  - port: 9186
+    targetPort: 9186
     protocol: TCP
-    name: {{ $firehoseExporter.serviceName }}
+    name: f-exp-service
   selector:
     app.kubernetes.io/name: "stratos-metrics"
-    app.kubernetes.io/component: "stratos-metrics-{{ $cfName }}-firehose-exporters-{{ . }}"
+    app.kubernetes.io/component: "stratos-metrics-firehose-exporters-{{ . }}"
   {{- end }}
 {{- end }}
-
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Release.Name }}-{{ .Values.nginx.serviceName }}
-  labels:
-    app.kubernetes.io/name: "stratos-metrics"
-    app.kubernetes.io/instance: "{{ .Release.Name }}"
-    app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
-    app.kubernetes.io/component: "stratos-metrics-{{ .Values.cfName }}-nginx-service"
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-spec:
-{{- if .Values.useLb }}
-  type: LoadBalancer
-{{- else }}
-  type: {{ .Values.nginx.serviceType }}
-{{- end }}
-{{- if or .Values.kube.external_ip .Values.kube.external_ips .Values.metrics.externalIP  }}
-  externalIPs: {{ template "service.externalIPs" . }} 
-{{- end }}
-  ports:
-{{- if and .Values.kube.external_metrics_port (or .Values.kube.external_ip .Values.kube.external_ips) }}
-  - port: {{ .Values.kube.external_metrics_port }}
-{{- else }}
-  - port: {{ .Values.nginx.externalPort }}
-{{- end }}
-    targetPort: 443
-    protocol: TCP
-    name: nginx
-  selector:
-    app.kubernetes.io/name: "stratos-metrics"
-    app.kubernetes.io/component: "stratos-metrics-{{ .Values.cfName }}-nginx"
