Deprecated APIs removed in kubernetes 1.16.
Ref: https://kubernetes.io/blog/2019/07/18/api-deprecations-in-1-16/

Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/stable/cf-usb-sidecar-mysql/templates/sidecar.yaml
+++ b/stable/cf-usb-sidecar-mysql/templates/sidecar.yaml
@@ -1,7 +1,7 @@
 ---
 # The sidecar role for cf-usb-sidecar-mysql contains the main
 # deployment of the sidecar (csm + extension binaries).
-apiVersion: "extensions/v1beta1"
+apiVersion: "apps/v1"
 kind: "Deployment"
 metadata:
   name: "cf-usb-sidecar-mysql"
