--- a/stable/console/Chart.yaml
+++ b/stable/console/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.5"
+appVersion: 1.5.1
 description: A Helm chart for deploying Stratos UI Console
 name: console
-version: 2.5.3
+version: 2.6.0
