--- a/stable/cf/Chart.yaml
+++ b/stable/cf/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 appVersion: 1.5.1
 description: A Helm chart for SUSE Cloud Foundry
 name: cf
-version: 2.19.1-rc2
-scfVersion: 2.19.1-rc2+cf9.5.0.0.gd8c18ede
+version: 2.19.1
+scfVersion: 2.19.1+cf9.5.0.0.gd8c18ede
