--- a/stable/metrics/values.yaml
+++ b/stable/metrics/values.yaml
@@ -2,7 +2,7 @@
 dockerRepository: registry.suse.com
 dockerOrganization: cap
 dockerRegistrySecret: regsecret
-imageTag: 1.1.0-39adb67-cap
+imageTag: 1.1.1-2fa6cdf-cap
 imagePullPolicy: IfNotPresent
 
 metrics:
@@ -145,28 +145,28 @@ prometheus:
     enabled: false
   configmapReload:
     image:
-      repository: registry.suse.com/cap/stratos-metrics-configmap-reload
-      tag: 1.1.0-39adb67-cap
+      repository: staging.registry.howdoi.website/splatform/stratos-metrics-configmap-reload
+      tag: 1.1.1-2fa6cdf-cap
   initChownData:
     image:
-      repository: registry.suse.com/cap/stratos-metrics-init-chown-data
-      tag: 1.1.0-39adb67-cap
+      repository: staging.registry.howdoi.website/splatform/stratos-metrics-init-chown-data
+      tag: 1.1.1-2fa6cdf-cap
   kubeStateMetrics:
     enabled: false
     image:
-      repository: registry.suse.com/cap/stratos-metrics-kube-state-metrics
-      tag: 1.1.0-39adb67-cap
+      repository: staging.registry.howdoi.website/splatform/stratos-metrics-kube-state-metrics
+      tag: 1.1.1-2fa6cdf-cap
   nodeExporter:    
     enabled: false
     image:
-      repository: registry.suse.com/cap/stratos-metrics-node-exporter
-      tag: 1.1.0-39adb67-cap
+      repository: staging.registry.howdoi.website/splatform/stratos-metrics-node-exporter
+      tag: 1.1.1-2fa6cdf-cap
   server:
     name: prometheus
     configMapOverrideName: stratos-metrics-config
     image:
-      repository: registry.suse.com/cap/stratos-metrics-prometheus
-      tag: 1.1.0-39adb67-cap
+      repository: staging.registry.howdoi.website/splatform/stratos-metrics-prometheus
+      tag: 1.1.1-2fa6cdf-cap
     replicaCount: 1
     service:
       servicePort: 9090
