--- a/stable/console/templates/ingress.yaml
+++ b/stable/console/templates/ingress.yaml
@@ -21,19 +21,25 @@ metadata:
     app.kubernetes.io/component: "console-ingress-tls"
     helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 data:
-  tls.crt: {{ .Values.console.service.ingress.tls.crt | default "" | b64enc | quote }}
-  tls.key: {{ .Values.console.service.ingress.tls.key | default "" | b64enc | quote }}
+{{ template "console.generateIngressCertificate" . }}
 {{- end }}
 
 ---
 # Ingress for the Console UI service
+{{- if semverCompare ">=1.16" (printf "%s.%s" .Capabilities.KubeVersion.Major .Capabilities.KubeVersion.Minor) }}
+apiVersion: "networking.k8s.io/v1beta1"
+{{- else }}
 apiVersion: "extensions/v1beta1"
+{{- end }}
 kind: "Ingress"
 metadata:
   name: "{{ .Release.Name }}-ingress"
   annotations:
     {{- if hasKey .Values.console.service.ingress.annotations "kubernetes.io/ingress.class" | not -}}
       {{ $_ := set .Values.console.service.ingress.annotations "kubernetes.io/ingress.class" "nginx" }}
+    {{- end }}
+    {{- if hasKey .Values.console.service.ingress.annotations "kubernetes.io/ingress.allow-http" | not -}}
+      {{ $_ := set .Values.console.service.ingress.annotations "kubernetes.io/ingress.allow-http" "false" }}
     {{- end }}
     {{- if hasKey .Values.console.service.ingress.annotations "nginx.ingress.kubernetes.io/secure-backends" | not -}}
       {{ $_ := set .Values.console.service.ingress.annotations "nginx.ingress.kubernetes.io/secure-backends" "true" }}
@@ -60,7 +66,7 @@ metadata:
 {{- end }}    
 spec:
   tls:
-  - secretName: {{ default "{{ .Release.Name }}-ingress-tls" .Values.console.service.ingress.secretName | quote }}
+  - secretName: {{ default (print .Release.Name "-ingress-tls") .Values.console.service.ingress.secretName | quote }}
     hosts:
     - {{ template "ingress.host" . }}
   rules:
