[Prometheus] Fix baseURL description, bsc#1159077

--- a/stable/prometheus/values.yaml
+++ b/stable/prometheus/values.yaml
@@ -555,7 +555,7 @@ server:
   ## (Optional)
   prefixURL: ""
 
-  ## External URL which can access alertmanager
+  ## External URL which can access prometheus-server
   ## Maybe same with Ingress host name
   baseURL: ""
 
