--- a/stable/console/values.yaml
+++ b/stable/console/values.yaml
@@ -1,5 +1,5 @@
 # Tag for images - do not edit
-consoleVersion: 2.6.1-9e13f7b0c-cap
+consoleVersion: 2.7.0-35f5964bd-cap
 dockerRegistrySecret: regsecret
 # Specify default DB password
 dbPassword: changeme
@@ -66,7 +66,7 @@ console:
   userInviteSubject: ~
 
   # Whether to perform the volume migration job on install/upgrade (migrate to secrets)
-  migrateVolumes: true
+  migrateVolumes: false
   
   # Enable/disable Tech Preview
   techPreview: false
